tests/ui/async-await/in-trait/bad-signatures.current.stderr
error: expected identifier, found keyword `self`
  --> $DIR/bad-signatures.rs:9:23
   |
LL |     async fn bar(&abc self);
   |                       ^^^^ expected identifier, found keyword

error: expected one of `:`, `@`, or `|`, found keyword `self`
  --> $DIR/bad-signatures.rs:9:23
   |
LL |     async fn bar(&abc self);
   |                  -----^^^^
   |                  |    |
   |                  |    expected one of `:`, `@`, or `|`
   |                  help: declare the type after the parameter binding: `<identifier>: <type>`

warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-signatures.rs:5:12
   |
LL | #![feature(async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 2 previous errors; 1 warning emitted

